--- a/admin.html
+++ b/admin.html
@@ -599,7 +599,7 @@
           <tr>
             <td>${new Date(log.timestamp).toLocaleString()}</td>
             <td>
-              <div style="font-weight:600;color:var(--text-primary)">匿名</div>
+              <div style="font-weight:600;color:var(--text-primary)">${log.nickname || log.userId || '匿名'}</div>
               <div style="font-size:12px;color:var(--text-secondary)">${log.ip}</div>
             </td>
             <td><span class="badge badge-accent">${log.apiType}</span></td>
